2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-set-away): added.  does basically everything
	get-away-msg used to do, except for the part about getting the
	away message.
	(tnt-get-away-msg): now just gets the away message.
	(tnt-away-toggle): now calls set-away, passing in the result of
	get-away-msg.
	(tnt-reconnecting-away): added.
	(tnt-reconnecting-away-msg): added.
	(tnt-handle-closed): now saves away status (tnt-away and
	tnt-away-msg).
	(tnt-handle-nick): now restores away status.

2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-reconnecting): added.
	(tnt-handle-closed): now sets reconnecting flag.
	(tnt-handle-nick): now checks reconnecting flag -- if it's t,
	make it nil; if it's already nil, show the buddy list.

2000-05-27  Jim Whitehead  <jnwhiteh@syr.edu>

	* tnt.el (tnt-fetch-info): fixed the regexp so it works.

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-message-on-buddy-signonoff): changed name from
	"show-buddy-signonoff", to be consistent with "beep-on-..." vars. 
	(tnt-set-buddy-status): changed name of var

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-open): added "Attempting to sign on..." message
	(tnt-buddy-list-mode-map): added tnt-fetch-info binding
	(tnt-fetch-info): added
	(tnt-handle-closed): now tries to auto-reconnect

2000-05-24  Jim Whitehead  <jnwhiteh@syr.edu>

	* tnt.el (tnt-show-buddy-signonoff): added.
	(tnt-set-buddy-status): checks for tnt-show-buddy-signoff, determines
	whether or not signon/off messages are displayed in the minibuffer.

2000-05-22  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-pop-event): now gives message if called when there
	are no events to respond to.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-login-flag-unset-after): added.
	(tnt-login-flag): added.
	(tnt-set-buddy-status): now checks the login flag.  for the first